--- a/frontend/src/app/components/pages/costos-config/costos-config.component.html
+++ b/frontend/src/app/components/pages/costos-config/costos-config.component.html
@@ -76,13 +76,12 @@
 										</td>
 									</tr>
 								</tbody>
-								<!-- Botón para abrir modal de creación de nuevo costo -->
-								<div class="mt-8 d-flex justify-content-end">
-									<button type="button" class="btn btn-outline-primary px-5" (click)="openCreate()">
-										<i class="bi bi-plus-lg me-1"></i> Nuevo costo
-									</button>
-								</div>
 							</table>
+						</div>
+						<div class="mt-3 d-flex justify-content-center">
+							<button type="button" class="btn btn-outline-primary px-5 text-nowrap" (click)="openCreate()">
+								<i class="bi bi-plus-lg me-1"></i> Nuevo costo
+							</button>
 						</div>
 					</div>
 				</div>
@@ -229,11 +228,10 @@
 						</div>
 						<div class="mb-3">
 							<label class="form-label">Turno</label>
-							<select class="form-select" formControlName="turno">
+							<select class="form-select" formControlName="turno" [disabled]="true">
 								<option value="MANANA">Mañana</option>
 								<option value="TARDE">Tarde</option>
 								<option value="NOCHE">Noche</option>
-								<option value="TODOS">Todos los turnos</option>
 							</select>
 						</div>
 					</div>
