--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -94,9 +94,9 @@
 								</div>
 								<div class="col-12">
 									<label class="form-label">Método de Pago</label>
-									<select class="form-select" formControlName="id_forma_cobro" [ngClass]="{'is-invalid': isFormaCobroInvalid}">
+									<select class="form-select" formControlName="codigo_sin" [ngClass]="{'is-invalid': isFormaCobroInvalid}" (change)="onMetodoPagoChange($event)">
 										<option value="">-- Seleccione --</option>
-										<option *ngFor="let f of formasCobro" [value]="f.id_forma_cobro">{{ f.descripcion_sin || f.nombre }}</option>
+										<option *ngFor="let f of formasCobro" [value]="f.codigo_sin || f.id_forma_cobro" [attr.id_forma_cobro]="f.id_forma_cobro">{{ f.descripcion_sin || f.nombre }}</option>
 									</select>
 									<div class="invalid-feedback">Seleccione un método de pago.</div>
 								</div>
